--- a/First Website/index.html.html
+++ b/First Website/index.html.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-  <button onclick="goToCharacterLink()"><img src="C:\Users\Vechi\Downloads\dnd-icon-22.jpg" alt="Description of the image" width="30" height="35"></button>
+  <button onclick="goToCharacterLink()"><img src="https://icon-library.com/images/dnd-icon/dnd-icon-22.jpg" alt="Description of the image" width="30" height="35"></button>
   
   <script>
     function goToCharacterLink() {
