--- a/First Website/index.html.html
+++ b/First Website/index.html.html
@@ -18,6 +18,19 @@
     <textarea id="textArea" rows="20" cols="80"></textarea>
     <button onclick="saveText()">Save Notes</button>
     <button onclick="loadText()">Load Notes</button>
+      <button class="dice" onclick="rollDice(4)">Roll d4</button>
+  <button class="dice" onclick="rollDice(6)">Roll d6</button>
+  <button class="dice" onclick="rollDice(8)">Roll d8</button>
+  <button class="dice" onclick="rollDice(10)">Roll d10</button>
+  <button class="dice" onclick="rollDice(12)">Roll d12</button>
+  <button class="dice" onclick="rollDice(20)">Roll d20</button>
+  <div id="result"></div>
+
+  <script>
+    function rollDice(diceType) {
+      const diceResult = Math.floor(Math.random() * diceType) + 1;
+      document.getElementById('result').textContent = `You rolled a ${diceResult} on a d${diceType}!`;
+    } 
    </div>
   <script src="script.js"></script>
  </body>
