--- a/First Website/index.html.html
+++ b/First Website/index.html.html
@@ -20,7 +20,7 @@
     <button onclick="loadText()">Load Notes</button>
   </div>
 
-  <button class="dice" onclick="rollDice(4)">Roll d4</button>
+  <button class="dice" onclick="rollDice(4)">Roll d4 <img src="https://icon-library.com/images/dnd-icon/dnd-icon-22.jpg" alt="Description of the image" width="30" height="35"></button>
   <button class="dice" onclick="rollDice(6)">Roll d6</button>
   <button class="dice" onclick="rollDice(8)">Roll d8</button>
   <button class="dice" onclick="rollDice(10)">Roll d10</button>
