--- a/First Website/index.html.html
+++ b/First Website/index.html.html
@@ -20,12 +20,12 @@
     <button onclick="loadText()">Load Notes</button>
   </div>
 
-  <button class="dice" onclick="rollDice(4)"><img src="https://icon-library.com/images/dnd-icon/dnd-icon-22.jpg" alt="Description of the image" width="30" height="35"></button>
-  <button class="dice" onclick="rollDice(6)">Roll d6</button>
-  <button class="dice" onclick="rollDice(8)">Roll d8</button>
-  <button class="dice" onclick="rollDice(10)">Roll d10</button>
-  <button class="dice" onclick="rollDice(12)">Roll d12</button>
-  <button class="dice" onclick="rollDice(20)">Roll d20</button>
+  <button class="dice" onclick="rollDice(4)"><img src="https://cdn.icon-icons.com/icons2/2248/PNG/512/dice_d_icon_138683.png" alt="Description of the image" width="30" height="35"></button>
+  <button class="dice" onclick="rollDice(6)"><img src="https://cdn.icon-icons.com/icons2/2248/PNG/512/dice_d_icon_138682.png" alt="Description of the image" width="30" height="35"></button>
+  <button class="dice" onclick="rollDice(8)"><img src="https://cdn.icon-icons.com/icons2/2248/PNG/512/dice_d_icon_136693.png" alt="Description of the image" width="30" height="35"></button>
+  <button class="dice" onclick="rollDice(10)"><img src="https://cdn.icon-icons.com/icons2/2248/PNG/512/dice_d_icon_138686.png" alt="Description of the image" width="30" height="35"></button>
+  <button class="dice" onclick="rollDice(12)"><img src="https://cdn.icon-icons.com/icons2/2248/PNG/512/dice_d_icon_138686.png" alt="Description of the image" width="30" height="35"></button>"
+  <button class="dice" onclick="rollDice(20)"><img src="https://cdn.icon-icons.com/icons2/2248/PNG/512/dice_d_icon_138684.png" alt="Description of the image" width="30" height="35"></button>
   <div id="result"></div>
 
   <script>
