--- a/First Website/index.html.html
+++ b/First Website/index.html.html
@@ -24,7 +24,7 @@
   <button class="dice" onclick="rollDice(6)"><img src="https://cdn.icon-icons.com/icons2/2248/PNG/512/dice_d_icon_138682.png" alt="Description of the image" width="30" height="35"></button>
   <button class="dice" onclick="rollDice(8)"><img src="https://cdn.icon-icons.com/icons2/2248/PNG/512/dice_d_icon_136693.png" alt="Description of the image" width="30" height="35"></button>
   <button class="dice" onclick="rollDice(10)"><img src="https://cdn.icon-icons.com/icons2/2248/PNG/512/dice_d_icon_138686.png" alt="Description of the image" width="30" height="35"></button>
-  <button class="dice" onclick="rollDice(12)"><img src="https://cdn.icon-icons.com/icons2/2248/PNG/512/dice_d_icon_138686.png" alt="Description of the image" width="30" height="35"></button>"
+  <button class="dice" onclick="rollDice(12)"><img src="https://icons.iconarchive.com/icons/pictogrammers/material/256/dice-d12-icon.png" alt="Description of the image" width="30" height="35"></button>
   <button class="dice" onclick="rollDice(20)"><img src="https://cdn.icon-icons.com/icons2/2248/PNG/512/dice_d_icon_138684.png" alt="Description of the image" width="30" height="35"></button>
   <div id="result"></div>
 
