--- a/First Website/index.html.html
+++ b/First Website/index.html.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Simple Notepad</title>
+  <title>Notes4D&D</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
