--- a/First Website/index.html.html
+++ b/First Website/index.html.html
@@ -1,8 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Notes4D&D</title>
+  <title>Simple Notepad</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
+  <style>
+    /* Style for the image next to the title */
+    #title img {
+      width: 30px;
+      height: 30px;
+      margin-right: 10px;
+      vertical-align: middle;
+    }
+  </style>
 </head>
 <body>
 
