--- a/First Website/index.html.html
+++ b/First Website/index.html.html
@@ -6,6 +6,7 @@
   <style>
     /* Style for the image next to the title */
     #title img {
+      src: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ37I_JeqM5Hqvvg7unAQduelJSahpkwmrHMuBuvOjMiTSwjsx0eDuLVusqey7YweVzAYs:https://cdn.pixabay.com/photo/2017/08/31/04/01/d20-2699387_1280.png&usqp=CAU"
       width: 30px;
       height: 30px;
       margin-right: 10px;
