--- a/First Website/index.html.html
+++ b/First Website/index.html.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Simple Notepad</title>
+  <title>Notes4D&D</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
-<style>
-  /* Style for the image next to the title */
-  #title img {
-    width: 30px;
-    height: 30px;
-    margin-right: 10px;
-    vertical-align: middle;
-  }
-</style>
+  <style>
+    /* Style for the image next to the title */
+    #title img {
+      width: 30px;
+      height: 30px;
+      margin-right: 10px;
+      vertical-align: middle;
+    }
+  </style>
 </head>
 <body>
+  <div id="title">
+    <img src="your-image-source.png" alt="Document Icon" width="30" height="30">
+    <h1>Untitled Document</h1>
+  </div>
   
 <div id="title">
   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ37I_JeqM5Hqvvg7unAQduelJSahpkwmrHMuBuvOjMiTSwjsx0eDuLVusqey7YweVzAYs:https://cdn.pixabay.com/photo/2017/08/31/04/01/d20-2699387_1280.png&usqp=CAU" alt="Description of the image" width="30" height="30">
