--- a/First Website/index.html.html
+++ b/First Website/index.html.html
@@ -2,7 +2,9 @@
 <html>
 <head>
   <title>
-  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ37I_JeqM5Hqvvg7unAQduelJSahpkwmrHMuBuvOjMiTSwjsx0eDuLVusqey7YweVzAYs:https://cdn.pixabay.com/photo/2017/08/31/04/01/d20-2699387_1280.png&usqp=CAU" alt="Document Icon" width="30" height="30"> Notes4D&D</title>
+  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ37I_JeqM5Hqvvg7unAQduelJSahpkwmrHMuBuvOjMiTSwjsx0eDuLVusqey7YweVzAYs:https://cdn.pixabay.com/photo/2017/08/31/04/01/d20-2699387_1280.png&usqp=CAU" alt="Document Icon" width="30" height="30"> 
+    Notes4D&D
+  </title>
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
