--- a/First Website/index.html.html
+++ b/First Website/index.html.html
@@ -18,8 +18,8 @@
 
   <div class="notepad">
     <textarea id="textArea" rows="20" cols="80"></textarea>
-    <button onclick="saveText()">Save Notes</button>
-    <button onclick="loadText()">Load Notes</button>
+    <button onclick="saveText()">Save</button>
+    <button onclick="loadText()">Load</button>
   </div>
 
   <button class="dice" onclick="rollDice(4)"><img src="https://cdn.icon-icons.com/icons2/2248/PNG/512/dice_d_icon_138683.png" alt="Description of the image" width="30" height="35"></button>
