--- a/First Website/index.html.html
+++ b/First Website/index.html.html
@@ -3,6 +3,7 @@
 <head>
   <title>
     Notes4D&D
+    <img src="https://cdn.icon-icons.com/icons2/2248/PNG/512/dice_d_icon_138683.png" alt="Description of the image" width="30" height="35"></button>
   </title>
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
