--- a/First Website/index.html.html
+++ b/First Website/index.html.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Notes4D&D</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
-    <link rel="icon" type="image/png" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSRTFkF5Ow0vOIT4CrdQKQ9pfhEjwnlK2ZWp12UlDNK7oVXGJ3So1Bx1_9iCU1hMAUMqR4:https://i.pinimg.com/736x/b1/75/8d/b1758da76a75beb97247901a4a606461.jpg&usqp=CAU">
+    <link rel="icon" type="image/png" href="https://static.vecteezy.com/system/resources/previews/004/263/180/original/paper-and-pencil-clipart-paper-and-pencil-icon-vector.jpg">
 </head>
 <body>
 
