--- a/First Website/index.html.html
+++ b/First Website/index.html.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Notes4D&D</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
-    <link rel="icon" type="image/png" href="paper-and-pencil-clipart-paper-and-pencil-icon-vector-removebg-preview_(1)">
+    <link rel="icon" type="image/png" href="https://static.vecteezy.com/system/resources/previews/004/263/180/original/paper-and-pencil-clipart-paper-and-pencil-icon-vector.jpg">
 </head>
 <body>
 
