--- a/First Website/index.html.html
+++ b/First Website/index.html.html
@@ -15,7 +15,15 @@
       window.open('https://www.dndbeyond.com/characters', '_blank');
     }
   </script>
+  
+   <button onclick="goToCharacterLink()"><img src="https://icon-library.com/images/dnd-icon/dnd-icon-22.jpg" alt="Description of the image" width="30" height="35"></button>
 
+  <script>
+    function goToCharacterLink() {
+      window.open('https://www.dndbeyond.com/characters', '_blank');
+    }
+  </script>
+  
   <div class="notepad">
     <textarea id="textArea" rows="20" cols="80"></textarea>
     <button onclick="saveText()">Save</button>
