--- a/First Website/index.html.html
+++ b/First Website/index.html.html
@@ -8,19 +8,19 @@
 </head>
 <body>
 
-   <button onclick="goToCharacterLink()"><img src="https://www.enworld.org/attachments/artficer-png.80071/" alt="Description of the image" width="30" height="35"></button>
-
-  <script>
-    function goToArtificer() {
-      window.open('https://docs.google.com/presentation/d/1Z2jCNXcDkkDRW-xnLZtwXs4TjfubQXe7z8xpusSSVj4/edit#slide=id.p1', '_blank');
-    }
-  </script>
-  
    <button onclick="goToCharacterLink()"><img src="https://icon-library.com/images/dnd-icon/dnd-icon-22.jpg" alt="Description of the image" width="30" height="35"></button>
 
   <script>
     function goToCharacterLink() {
       window.open('https://www.dndbeyond.com/characters', '_blank');
+    }
+  </script>
+  
+   <button onclick="goToArtificerLink()"><img src="https://www.enworld.org/attachments/artficer-png.80071/" alt="Description of the image" width="30" height="35"></button>
+
+  <script>
+    function goToArtificerLink() {
+      window.open('https://docs.google.com/presentation/d/1Z2jCNXcDkkDRW-xnLZtwXs4TjfubQXe7z8xpusSSVj4/edit#slide=id.p98', '_blank');
     }
   </script>
   
