--- a/First Website/index.html.html
+++ b/First Website/index.html.html
@@ -15,6 +15,14 @@
       window.open('https://www.dndbeyond.com/characters', '_blank');
     }
   </script>
+
+   <button onclick="goToBardLink()"><img src="https://i.pinimg.com/originals/28/c7/95/28c795e4db4c71da104642b271964c3a.png" alt="Description of the image" width="30" height="35"></button>
+
+  <script>
+    function goToBardLink() {
+      window.open('https://docs.google.com/presentation/d/1s6nJ3ePH8xyCLZPixW_ri3i5zSXe4zWuob1ldGCMKLA/edit#slide=id.p1', '_blank');
+    }
+  </script>
   
    <button onclick="goToArtificerLink()"><img src="https://ih1.redbubble.net/image.3312796746.4132/bg,f8f8f8-flat,750x,075,f-pad,750x1000,f8f8f8.u1.jpg" alt="Description of the image" width="30" height="35"></button>
 
