--- a/First Website/index.html.html
+++ b/First Website/index.html.html
@@ -16,22 +16,70 @@
     }
   </script>
 
-   <button onclick="goToArtificerLink()"><img src="https://ih1.redbubble.net/image.3312796746.4132/bg,f8f8f8-flat,750x,075,f-pad,750x1000,f8f8f8.u1.jpg" alt="Description of the image" width="30" height="35"></button>
-
+   <button onclick="goToArtificerLink()">Artificer</button>
+   <button onclick="goToBardLink()">Bard</button>
+   <button onclick="goToClericLink()">Cleric</button>
+   <button onclick="goToDruidLink()">Druid</button>
+   <button onclick="goToPaladinLink()">Paladin</button>
+   <button onclick="goToRangerLink()">Ranger</button>
+   <button onclick="goToSorcererLink()">Sorcerer</button>
+   <button onclick="goToLink()">Warlock</button>
+   <button onclick="goToBardLink()">Wizard</button>
+  
   <script>
     function goToArtificerLink() {
       window.open('https://docs.google.com/presentation/d/1Z2jCNXcDkkDRW-xnLZtwXs4TjfubQXe7z8xpusSSVj4/edit#slide=id.p98', '_blank');
     }
   </script>
   
-   <button onclick="goToBardLink()">Bard</button>
-
   <script>
     function goToBardLink() {
       window.open('https://docs.google.com/presentation/d/1s6nJ3ePH8xyCLZPixW_ri3i5zSXe4zWuob1ldGCMKLA/edit#slide=id.p1', '_blank');
     }
   </script>
+
+    <script>
+    function goToClericLink() {
+      window.open('https://docs.google.com/presentation/d/1_JBcSRHILYpUNB0WGlhD8ruEpGvBDpE0syJneEZj-uQ/edit#slide=id.p1', '_blank');
+    }
+  </script>
+
+    <script>
+    function goToDruidLink() {
+      window.open('https://docs.google.com/presentation/d/1VFQl3um-DyE_LMErKDcvkY3zYVE0aoL9qpvF1UcvJYk/edit#slide=id.p1', '_blank');
+    }
+  </script>
+
+    <script>
+    function goToPaladinLink() {
+      window.open('https://docs.google.com/presentation/d/1ICX0t0NSjrZG_-6AcPoiLMj_3cRmPouTrCeXtQH4smk/edit#slide=id.p1', '_blank');
+    }
+  </script>
+
+    <script>
+    function goToRangerLink() {
+      window.open('https://docs.google.com/presentation/d/1gaM7DIzpLOVqzL5fd2hcp6moAp2wJxZ8q5Petq__GAk/edit#slide=id.p1', '_blank');
+    }
+  </script>
+
+    <script>
+    function goToSorcererLink() {
+      window.open('https://docs.google.com/presentation/d/1s6nJ3ePH8xyCLZPixW_ri3i5zSXe4zWuob1ldGCMKLA/edit#slide=id.p1', '_blank');
+    }
+  </script>
+
+    <script>
+    function goToWarlockLink() {
+      window.open('https://docs.google.com/presentation/d/1HmkQ22Jh4kK4SEw-9libL2XWmfmcNO77lCv3sinOjns/edit#slide=id.p1', '_blank');
+    }
+  </script>
   
+    <script>
+    function goToWizardLink() {
+      window.open('https://docs.google.com/presentation/d/1P1GL0q_wvYCuH9hssR7rzqRvaq8ov195knHrzojY3nk/edit#slide=id.p1', '_blank');
+    }
+  </script>
+
   <div class="notepad">
     <textarea id="textArea" rows="20" cols="80"></textarea>
     <button onclick="saveText()">Save</button>
