--- a/First Website/index.html.html
+++ b/First Website/index.html.html
@@ -23,8 +23,8 @@
    <button onclick="goToPaladinLink()">Paladin</button>
    <button onclick="goToRangerLink()">Ranger</button>
    <button onclick="goToSorcererLink()">Sorcerer</button>
-   <button onclick="goToLink()">Warlock</button>
-   <button onclick="goToBardLink()">Wizard</button>
+   <button onclick="goToWarlockLink()">Warlock</button>
+   <button onclick="goToWizardLink()">Wizard</button>
   
   <script>
     function goToArtificerLink() {
