--- a/First Website/index.html.html
+++ b/First Website/index.html.html
@@ -64,13 +64,13 @@
 
     <script>
     function goToSorcererLink() {
-      window.open('https://docs.google.com/presentation/d/1s6nJ3ePH8xyCLZPixW_ri3i5zSXe4zWuob1ldGCMKLA/edit#slide=id.p1', '_blank');
+      window.open('https://docs.google.com/presentation/d/1HmkQ22Jh4kK4SEw-9libL2XWmfmcNO77lCv3sinOjns/edit?usp=sharing', '_blank');
     }
   </script>
 
     <script>
     function goToWarlockLink() {
-      window.open('https://docs.google.com/presentation/d/1HmkQ22Jh4kK4SEw-9libL2XWmfmcNO77lCv3sinOjns/edit#slide=id.p1', '_blank');
+      window.open('https://docs.google.com/presentation/d/1ifiwAZzQ04SvrwfEhv7VCVr8fdV8sViT237IMCj7zEU/edit?usp=sharing', '_blank');
     }
   </script>
   
