--- a/First Website/index.html.html
+++ b/First Website/index.html.html
@@ -107,7 +107,7 @@
 
       const a = document.createElement('a');
       a.href = url;
-      a.download = 'notepad.txt';
+      a.download = 'D&DNotes.txt';
       a.style.display = 'none';
       document.body.appendChild(a);
       a.click();
