--- a/First Website/index.html.html
+++ b/First Website/index.html.html
@@ -64,7 +64,7 @@
 
     <script>
     function goToSorcererLink() {
-      window.open('https://docs.google.com/presentation/d/1HmkQ22Jh4kK4SEw-9libL2XWmfmcNO77lCv3sinOjns/edit?usp=sharing', '_blank');
+      window.open('https://docs.google.com/presentation/d/1-ApZgBFVBVqg6QomTk2fcuUEGMe7vFQVMzwBQUIGpeY/edit#slide=id.p1', '_blank');
     }
   </script>
 
