--- a/First Website/index.html.html
+++ b/First Website/index.html.html
@@ -70,7 +70,7 @@
 
     <script>
     function goToWarlockLink() {
-      window.open('https://docs.google.com/presentation/d/1ifiwAZzQ04SvrwfEhv7VCVr8fdV8sViT237IMCj7zEU/edit?usp=sharing', '_blank');
+      window.open('https://docs.google.com/presentation/d/1KNy7cPrt9v2o9acgjkYQpGpHv0vWxkk7dkbDcQ5ZxOg/edit#slide=id.p1', '_blank');
     }
   </script>
   
